--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -1,6 +1,5 @@
 $colors: (
   BG: #000000,
-  Compoent: #292929,
-  // øvre trekant accent: rgb(17, 17, 26) / / nedre trekant
-    Prim-text: White
+  Component: #292929,
+  Prim-text: White
 ) !global;
