--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -1,5 +1,8 @@
+//her skal alle globale style variabler ligge som bakrunsfarge oandre elementer som strekker seg over flere sider
+
 $colors: (
   BG: #000000,
   Component: #292929,
-  Prim-text: White
+  Prim-text: White,
+  t-green: #17fea0
 ) !global;
