--- a/src/About/About.scss
+++ b/src/About/About.scss
@@ -1,6 +1,8 @@
 @import "../styles";
 
 .About {
+  display: flex;
+  justify-content: center;
   font-family: "Montserrat";
   max-height: 3vh;
   padding: 1em 0;
