--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,8 @@ body {
   font-size: 35px;
   background-color: map-get($colors, BG);
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   home {
     padding: 100rem;
