--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -14,6 +14,7 @@
   margin: 0;
   background-color: map-get($colors, Component);
   border: 1px solid green; //bare for å markere hvor ting ligger
+  margin-top: 10vh;
 
   .F-items {
     display: flex;
