--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -3,8 +3,8 @@
 .Dashboard {
   display: flex;
   //justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-start;
   font-family: "Montserrat";
 
   padding: 1em 0;
@@ -13,7 +13,12 @@
 
   margin-bottom: 10px;
   color: map-get($colors, Prim-text);
-  border: 3px solid red; //bare for å markere hvor ting ligger
+
+  position: +1;
+
+  .signin {
+    margin-left: 25vw;
+  }
 
   h1 {
     color: map-get($colors, Prim-text);
