--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
 
-    margin: aut0;
+    margin-right: 2vh;
   }
   .logo {
     border: 1px solid red;
