--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -15,6 +15,42 @@
   color: map-get($colors, Prim-text);
 
   position: +1;
+  .Dash {
+    //dette er hele elementet er navbar og elemnt liger
+    display: flex;
+    flex-direction: row;
+    .screen {
+      //dette er hele elemntet av skjermen til høyere for navbar
+      //border: 1px solid red;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      width: 90vw;
+      height: 90vh;
+
+      margin: 1rem;
+
+      .Element {
+        display: flex;
+        flex-direction: column;
+
+        text-align: center;
+        background-color: map-get($colors, Component);
+        //generell design for elementene på dashboard
+        border-radius: 5px;
+        //border: 3px solid blue;
+        max-height: 25vw;
+        min-width: 25vw;
+
+        .Maps {
+          margin-left: 10rem;
+          width: 100rem;
+          height: 100rem;
+          border: 3px solid blue;
+        }
+      }
+    }
+  }
 
   .signin {
     margin-left: 25vw;
