--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -25,6 +25,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
+      align-items: flex-start;
       width: 90vw;
       height: 90vh;
 
@@ -40,7 +41,9 @@
         border-radius: 5px;
         //border: 3px solid blue;
         max-height: 25vw;
+        min-height: 25vw;
         min-width: 25vw;
+        max-width: 25vw;
 
         .Maps {
           margin-left: 10rem;
@@ -53,7 +56,7 @@
   }
 
   .signin {
-    margin-left: 25vw;
+    margin-left: 15%;
   }
 
   h1 {
@@ -68,11 +71,9 @@
     margin-bottom: 1rem;
     font-weight: bold;
 
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding: 1rem;
     font-size: 20px;
 
-    text-align: center;
     color: map-get($colors, Prim-text);
     background-color: darken(map-get($colors, Component), 5%);
     border: 2px outset map-get($colors, t-green);
