--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -15,7 +15,7 @@
   background-color: map-get($colors, Component);
 
   font-size: 1rem;
-  width: 5vw;
+  width: 8vw;
 
   .items-container {
     display: flex;
@@ -63,6 +63,7 @@
 
   .Nav-item {
     text-decoration: none;
+    text-align: center;
     margin: 0;
     padding: 1rem;
     //border: 3px solid red;
