--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -4,5 +4,6 @@ $colors: (
   BG: #000000,
   Component: #292929,
   Prim-text: White,
-  t-green: #17fea0
+  t-green: #17fea0,
+  t-pink: rgb(255, 102, 128)
 ) !global;
