--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -1,35 +1,31 @@
 @import "../styles";
 
 .Dashboard {
-  display: flex;
-  //justify-content: center;
-  flex-direction: row;
-  align-items: flex-start;
-  font-family: "Montserrat";
-
-  padding: 1em 0;
-  width: 100vw;
-  height: 110vh;
-
-  margin-bottom: 10px;
+  text-align: center;
   color: map-get($colors, Prim-text);
-
-  position: +1;
+  height: 100%;
   .Dash {
+    margin-top: 4vh;
     //dette er hele elementet er navbar og elemnt liger
     display: flex;
     flex-direction: row;
+    height: 100%;
+    widows: 100%;
+    .navbar {
+      margin: 0;
+    }
+
     .screen {
       //dette er hele elemntet av skjermen til høyere for navbar
-      //border: 1px solid red;
+      border: 1px solid red;
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
       align-items: flex-start;
-      width: 90vw;
-      height: 90vh;
+      width: 100%;
+      height: 80vh;
 
-      margin: 1rem;
+      margin: 0;
 
       .Element {
         display: flex;
@@ -56,42 +52,11 @@
   }
 
   .signin {
-    margin-left: 15%;
+    align-self: flex-start;
+    border: 1px solid red;
   }
 
   h1 {
     color: map-get($colors, Prim-text);
-  }
-
-  .signout {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-weight: bold;
-
-    padding: 1rem;
-    font-size: 20px;
-
-    color: map-get($colors, Prim-text);
-    background-color: darken(map-get($colors, Component), 5%);
-    border: 2px outset map-get($colors, t-green);
-
-    border-radius: 300px;
-
-    &:hover {
-      color: map-get($colors, t-green);
-      border: 2px outset map-get($colors, t-pink);
-
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-      padding-right: 1rem;
-      padding-left: 1rem;
-
-      background-color: darken(map-get($colors, Component), 5%);
-      //border: 10px outset ligthen(map-get($colors, t-green), 40%);
-      border-radius: 300px;
-    }
   }
 }
