--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -8,24 +8,24 @@
   position: absolute; // låser footer på bånd
   bottom: 0px; //det samme her
   align-self: center;
-  width: 100vw; //1 vw er 1% av skjermbredden setter til 100% her
-  max-height: 20vh; //1 vh er 1% av skjer høyden
+  width: 100%;
+
   min-height: 10vh;
   margin: 0;
   background-color: map-get($colors, Component);
-  border: 1px solid green; //bare for å markere hvor ting ligger
-  margin-top: 10vh;
+  //border: 1px solid green; //bare for å markere hvor ting ligger
+  margin-top: 2vh;
 
   .F-items {
     display: flex;
-    border: 1px solid green;
+    //border: 1px solid green;
 
     align-items: center;
     max-height: 90vh;
   }
   .F-Logo {
     max-height: 9vh;
-    border: 1px solid red;
+    //border: 1px solid red;
     padding-right: 3vh; //er det det høres ut som
   }
 }
