--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -5,6 +5,7 @@
   justify-content: flex-end;
   justify-content: space-between;
   align-self: center;
+
   max-height: 10vh;
   margin: 0;
   background-color: map-get($colors, Component);
@@ -13,6 +14,7 @@
   .items-container {
     display: flex;
     flex-direction: row;
+    //border: 1px solid red;
 
     margin-right: 2vh;
   }
