--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -8,9 +8,10 @@
   align-items: center;
   margin: 0rem;
   padding: 0;
-  height: 50vw;
+  height: 100%;
   margin-top: -2rem;
   margin-bottom: -2rem;
+  color: map-get($colors, Prim-text);
 
   background-color: map-get($colors, Component);
 
@@ -24,6 +25,7 @@
     justify-content: space-between;
     font-size: 1.2rem;
     font-weight: bold;
+    width: 100%;
 
     //border: 3px solid blue;
   }
@@ -49,15 +51,15 @@
   }
 
   .pic {
-    width: 5rem;
-    height: 5rem;
+    width: 70%;
+    height: 70%;
     border-radius: 300px;
 
     //border: 1px solid map-get($colors, Prim-text);
   }
   .user {
     text-align: center;
-    font-size: 1.4rem;
+    font-size: 100%;
     margin: 0;
   }
 
@@ -65,9 +67,12 @@
     text-decoration: none;
     text-align: center;
     margin: 0;
-    max-width: 100%;
-    padding: 0.5rem;
-    font-size: 2rem;
+
+    padding-top: 10%;
+    padding-bottom: 10%;
+    width: 100%;
+
+    font-size: 130%;
     //border: 3px solid red;
 
     color: map-get($colors, Prim-text);
@@ -77,10 +82,39 @@
 
     &:hover {
       color: map-get($colors, t-green);
-      padding: o.5rem;
 
       background-color: darken(map-get($colors, Component), 5%);
       border-color: ligthen(map-get($colors, Component), 5%);
     }
+  }
+}
+
+.signout {
+  //knappen som signerer ut
+
+  text-decoration: none;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
+
+  padding: 0.5vw;
+  font-size: 1.5vw;
+
+  color: map-get($colors, Prim-text);
+  background-color: darken(map-get($colors, Component), 5%);
+  border: 2px outset map-get($colors, t-green);
+
+  border-radius: 300rem;
+
+  &:hover {
+    color: map-get($colors, t-green);
+    border: 2px outset map-get($colors, t-pink);
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+    background-color: darken(map-get($colors, Component), 5%);
+    //border: 10px outset ligthen(map-get($colors, t-green), 40%);
+    border-radius: 300px;
   }
 }
