--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -12,13 +12,13 @@
 
   margin-bottom: 10px;
   color: map-get($colors, Prim-text);
-  border: 1px solid green; //bare for å markere hvor ting ligger
+  //border: 1px solid green; //bare for å markere hvor ting ligger
 
   .H-el {
     text-align: center;
   }
 
   h1 {
-    border: 1px solid green; //bare for å markere hvor ting ligger
+    //border: 1px solid green; //bare for å markere hvor ting ligger
   }
 }
