--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 @import "styles";
-
+@import url("https://fonts.googleapis.com/css?family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Slabo+27px&display=swap");
 body {
   margin: 0;
   position: relative;
