--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -9,7 +9,7 @@
     //dette er hele elementet er navbar og elemnt liger
     display: flex;
     flex-direction: row;
-    height: 100%;
+    min-height: 100%;
     widows: 100%;
     .navbar {
       margin: 0;
@@ -17,13 +17,13 @@
 
     .screen {
       //dette er hele elemntet av skjermen til høyere for navbar
-      border: 1px solid red;
+
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      justify-content: center;
       align-items: flex-start;
       width: 100%;
-      height: 80vh;
+      min-height: 80vh;
 
       margin: 0;
 
