--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -2,7 +2,8 @@
 
 $colors: (
   BG: #000000,
-  Component: #292929,
+  //Component: #292929,
+    Component: #1d1d1d,
   Prim-text: White,
   t-green: #17fea0,
   t-pink: rgb(255, 102, 128)
