--- a/src/About/About.scss
+++ b/src/About/About.scss
@@ -2,12 +2,29 @@
 
 .About {
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  text-align: center;
+
   font-family: "Montserrat";
-  max-height: 3vh;
+
   padding: 1em 0;
 
-  //border: 1px solid darken(map-get($colors, Component), 10%);
   margin-bottom: 10px;
   color: map-get($colors, Prim-text);
+
+  .cont {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0 auto;
+    width: 50%;
+    .h1 {
+    }
+  }
+}
+.tekst {
+  color: white;
+  margin: 0 auto;
+  width: 70%;
 }
