--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -1,6 +1,26 @@
 .MyMap {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
-
+  width: 100%;
+  height: 100vh;
+  //border: 1px solid red;
+  padding: 0;
+  padding-bottom: -100vh;
   padding: 2.8rem;
+  .section {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    padding-bottom: -100vh;
+    .maps {
+      width: 20%;
+      height: 20%;
+      padding: 0;
+
+      padding-bottom: -100vh;
+
+      //border: 1px solid red;
+    }
+  }
 }
