--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -20,10 +20,10 @@
 
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: flex-start;
       width: 100%;
-      min-height: 80vh;
+      min-height: 100%;
 
       margin: 0;
 
