--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -1,7 +1,7 @@
 //her skal alle globale style variabler ligge som bakrunsfarge oandre elementer som strekker seg over flere sider
 
 $colors: (
-  BG: #000000,
+  BG: black,
   //Component: #292929,
     Component: #1d1d1d,
   Prim-text: White,
