--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -1,26 +1,25 @@
-.MyMap {
+@import "src/styles";
+
+.Maps {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  height: 100vh;
+  height: 90%;
+  margin: 1%;
+
   //border: 1px solid red;
-  padding: 0;
-  padding-bottom: -100vh;
-  padding: 2.8rem;
-  .section {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    padding-bottom: -100vh;
-    .maps {
-      width: 20%;
-      height: 20%;
-      padding: 0;
+  padding: 1%;
+  padding-bottom: 10%;
+  //padding-bottom: -100vh;
+  //padding: 2.8rem;
+  border: 1px solid blue;
 
-      padding-bottom: -100vh;
-
-      //border: 1px solid red;
-    }
+  .tekst {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    color: map-get($colors, t-green);
+    margin: 0;
   }
 }
