--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -5,12 +5,13 @@
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  height: 90%;
+  min-height: 80%;
   margin: 1%;
+  margin-bottom: 10%;
 
   //border: 1px solid red;
   padding: 1%;
-  padding-bottom: 10%;
+
   //padding-bottom: -100vh;
   //padding: 2.8rem;
   border: 1px solid blue;
