--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -17,7 +17,7 @@
 
     .screen {
       //dette er hele elemntet av skjermen til høyere for navbar
-      //border: 1px solid red;
+      //gborder: 1px solid red;
 
       display: flex;
       flex-direction: row;
