--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -25,6 +25,7 @@
       align-items: flex-start;
       width: 100%;
       min-height: 100%;
+      //border: 1px solid blue;
 
       margin: 0;
       margin-bottom: 10%;
