--- a/src/Components/Data/Data.scss
+++ b/src/Components/Data/Data.scss
@@ -10,22 +10,69 @@
 
   margin: 1%;
   color: map-get($colors, Prim-text);
-  border: 1px solid yellow;
+  //border: 1px solid yellow;
   margin-bottom: 3%;
 
   .Card {
     padding: 1%;
-    width: 20%;
+    width: 60%;
     height: 30%;
     background-color: map-get($colors, Component);
     margin: 1%;
-    border: 1px solid red;
-    .pic {
-      width: 100%;
-      height: 100%;
+
+    .dataButton {
+      text-decoration: none;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      font-weight: bold;
+
+      padding: 0.5vw;
+      font-size: 1.5vw;
+
+      color: map-get($colors, Prim-text);
+      background-color: darken(map-get($colors, Component), 5%);
+      border: 2px outset map-get($colors, t-green);
+
+      &:hover {
+        color: map-get($colors, t-green);
+        border: 2px outset map-get($colors, t-pink);
+
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+
+        background-color: darken(map-get($colors, Component), 5%);
+        //border: 10px outset ligthen(map-get($colors, t-green), 40%);
+        border-radius: 300px;
+      }
+    }
+
+    .dataBar {
+      font-size: 20px;
+      background-color: lighten(map-get($colors, Component), 5%);
+
+      border-radius: 5px;
+      padding: 20px;
+
+      color: white;
+      font-weight: bold;
+
+      &:focus {
+        outline: none;
+
+        border: 2px solid map-get($colors, t-green);
+      }
     }
   }
 }
 p {
   color: white;
+}
+
+.Bird {
+  display: flex;
+  justify-content: space-between;
+
+  .counter {
+    color: map-get($colors, t-green);
+  }
 }
