--- a/src/Components/Data/Data.scss
+++ b/src/Components/Data/Data.scss
@@ -15,7 +15,7 @@
 
   .Card {
     padding: 1%;
-    width: 60%;
+    min-width: 30%;
     height: 30%;
     background-color: map-get($colors, Component);
     margin: 1%;
