--- a/src/Components/Data/Data.scss
+++ b/src/Components/Data/Data.scss
@@ -1,70 +1,95 @@
 @import "src/styles";
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 .Data {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  //flex-wrap: wrap;
+  margin: 0 auto;
   justify-content: flex-start;
   width: 100%;
   min-height: 100vh;
+  padding: 0;
 
   margin: 1%;
   color: map-get($colors, Prim-text);
   //border: 1px solid yellow;
   margin-bottom: 3%;
+  //border: 1px solid red;
 
-  .Card {
-    padding: 1%;
-    min-width: 30%;
-    height: 30%;
-    background-color: map-get($colors, Component);
-    margin: 1%;
+  .Dato {
+    //border: 1px solid red;
+    display: flex;
+    flex-direction: row;
+    width: auto;
+    height: 10%;
 
-    .dataButton {
-      text-decoration: none;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-      font-weight: bold;
+    justify-content: center;
 
-      padding: 0.5vw;
-      font-size: 1.5vw;
+    .datoBoks {
+      display: flex;
+      flex-direction: column;
+      margin: 1rem;
+      width: auto;
+      height: auto; // kan være en geil her
+      text-align: left;
+      font-display: rigth;
+      font-size: 1.2rem;
 
-      color: map-get($colors, Prim-text);
-      background-color: darken(map-get($colors, Component), 5%);
-      border: 1px outset map-get($colors, Prim-text);
-
-      &:hover {
-        color: map-get($colors, t-green);
-        border: 1px outset map-get($colors, t-pink);
-
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-
-        background-color: darken(map-get($colors, Component), 5%);
-        //border: 10px outset ligthen(map-get($colors, t-green), 40%);
-        border-radius: 300px;
-      }
-    }
-
-    .dataBar {
-      width: 10%;
-      font-size: 20px;
-      background-color: lighten(map-get($colors, Component), 5%);
-
-      border-radius: 5px;
-      padding: 20px;
-
-      color: white;
-      font-weight: bold;
-
-      &:focus {
-        outline: none;
-
-        border: 2px solid map-get($colors, t-green);
+      .fromTo {
+        margin: 0;
+        width: auto;
       }
     }
   }
+
+  .dataButton {
+    text-decoration: none;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    border-radius: 10px;
+
+    padding: 0.5vw;
+    font-size: 1.2vw;
+
+    color: map-get($colors, Prim-text);
+    background-color: darken(map-get($colors, Component), 5%);
+    border: 1px outset map-get($colors, t-green);
+
+    &:hover {
+      color: map-get($colors, t-green);
+      border: 1px outset map-get($colors, t-pink);
+
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+
+      background-color: darken(map-get($colors, Component), 5%);
+      //border: 10px outset ligthen(map-get($colors, t-green), 40%);
+      border-radius: 300px;
+    }
+  }
+
+  .dataBar {
+    width: 10%;
+    font-size: 20px;
+    background-color: lighten(map-get($colors, Component), 5%);
+
+    border-radius: 5px;
+    padding: 20px;
+    margin: 0;
+
+    color: white;
+    font-weight: bold;
+
+    &:focus {
+      outline: none;
+
+      border: 2px solid map-get($colors, t-green);
+    }
+  }
 }
+
 p {
   color: white;
 }
@@ -76,4 +101,63 @@ p {
 
 .counter {
   color: map-get($colors, t-green);
+}
+
+.dateForm {
+  margin: 0;
+
+  width: auto;
+  height: auto;
+  font-size: 20px;
+  font-family: Montserrat;
+  background-color: lighten(map-get($colors, Component), 5%);
+
+  border-radius: 5px;
+  border: none;
+  padding: 0.4rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
+  color: map-get($colors, t-green);
+  font-weight: bold;
+  border: 1px outset map-get($colors, Component);
+
+  //&:hover {
+  //color: map-get($colors, t-green);
+  // border: 1px outset map-get($colors, t-pink);
+
+  //  background-color: darken(map-get($colors, Component), 5%);
+  //  //border: 10px outset ligthen(map-get($colors, t-green), 40%);
+  // border-radius: 300px;
+  // }
+}
+
+.nodeSelect {
+  //Styling av selct node elementet
+
+  margin-right: 1rem;
+  width: 95%;
+  height: auto;
+  font-size: 20px;
+  font-family: Montserrat;
+  background-color: lighten(map-get($colors, Component), 5%);
+
+  border-radius: 5px;
+  border: none;
+  padding: 0.4rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
+  color: map-get($colors, t-green);
+  font-weight: bold;
+  border: 1px outset map-get($colors, Component);
+}
+
+.Card {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+
+  margin: 0;
 }
