--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -1,5 +1,5 @@
 //her skal alle globale style variabler ligge som bakrunsfarge oandre elementer som strekker seg over flere sider
-
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 $colors: (
   BG: black,
   //Component: #292929,
