--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -5,8 +5,10 @@
   flex-direction: column;
   justify-content: flex-start;
   width: 100%;
-  min-height: 100%;
-  margin: 0 auto;
+  min-height: 50rem;
+  margin: 3px auto;
+  position: "absolute";
+  //border: 1px solid red;
 
   //padding-bottom: -100vh;
   //padding: 2.8rem;
