--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -4,9 +4,10 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 100%;
+  width: 99%;
   min-height: 50rem;
-  margin: 3px auto;
+  margin: 0 auto;
+
   position: "absolute";
   //border: 1px solid red;
 
