--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: flex-start;
   width: 99%;
-  min-height: 50rem;
+  min-height: 100%;
   margin: 0 auto;
 
   position: "absolute";
