--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -24,8 +24,7 @@
       justify-content: flex-start;
       align-items: flex-start;
       width: 100%;
-      min-height: 100%;
-      //border: 1px solid blue;
+      min-height: 60vh;
 
       margin: 0;
       margin-bottom: 10%;
