--- a/src/Components/Data/Data.scss
+++ b/src/Components/Data/Data.scss
@@ -8,7 +8,7 @@
   margin: 0 auto;
   justify-content: flex-start;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   padding: 0;
 
   margin: 1%;
