--- a/src/Dashboard/Dashboard.scss
+++ b/src/Dashboard/Dashboard.scss
@@ -9,10 +9,12 @@
     //dette er hele elementet er navbar og elemnt liger
     display: flex;
     flex-direction: row;
-    min-height: 100%;
-    widows: 100%;
+    height: 100%;
+    //widows: 100%;
+    //border: 5px solid red;
     .navbar {
       margin: 0;
+      min-height: 95vh;
     }
 
     .screen {
@@ -24,7 +26,7 @@
       justify-content: flex-start;
       align-items: flex-start;
       width: 100%;
-      min-height: 60vh;
+      height: 100%;
 
       margin: 0;
       margin-bottom: 10%;
@@ -42,13 +44,6 @@
         min-height: 25vw;
         min-width: 25vw;
         max-width: 25vw;
-
-        .Maps {
-          margin-left: 10rem;
-          width: 100rem;
-          height: 100rem;
-          border: 3px solid blue;
-        }
       }
     }
   }
