--- a/src/Navbar/Navbar.scss
+++ b/src/Navbar/Navbar.scss
@@ -8,7 +8,7 @@
   align-items: center;
   margin: 0rem;
   padding: 0;
-  height: 100%;
+
   margin-top: -2rem;
   margin-bottom: -2rem;
   color: map-get($colors, Prim-text);
@@ -17,6 +17,9 @@
 
   font-size: 1rem;
   width: 8vw;
+  height: 100%;
+  //border: 3px solid red;
+  //min-height: 100%;
 
   .items-container {
     display: flex;
@@ -26,6 +29,14 @@
     font-size: 1.2rem;
     font-weight: bold;
     width: 100%;
+    min-height: 95%;
+
+    //border: 3px solid red;
+
+    .seperator {
+      margin: 0;
+      //border: 3px solid blue;
+    }
 
     //border: 3px solid blue;
   }
@@ -64,6 +75,8 @@
   }
 
   .Nav-item {
+    display: flex;
+    justify-content: center;
     text-decoration: none;
     text-align: center;
     margin: 0;
@@ -117,4 +130,8 @@
     //border: 10px outset ligthen(map-get($colors, t-green), 40%);
     border-radius: 300px;
   }
+}
+
+.full {
+  margin: 0 auto;
 }
