--- a/src/Components/Default/Default.scss
+++ b/src/Components/Default/Default.scss
@@ -2,10 +2,11 @@
   width: 100%;
   justify-items: stretch;
   align-items: stretch;
+  margin: 0.5%;
 
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  grid-template-rows: auto;
+  grid-template-rows: 50%;
   grid-template-areas:
     "element1 element2 element3 "
     "element4 element5 element3";
