--- a/src/Components/Maps/Maps.scss
+++ b/src/Components/Maps/Maps.scss
@@ -18,3 +18,41 @@
 .dimButton {
   border-radius: 100px;
 }
+.nodeMarker {
+  position: relative;
+  width: 30px;
+  height: 30px;
+}
+.nodeMarker .tooltip::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -10px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent transparent map-get($colors, Component) transparent;
+}
+
+.nodeMarker .tooltip {
+  visibility: hidden;
+
+  background-color: map-get($colors, Component);
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+
+  font-size: 0.9rem;
+  width: 8rem;
+  padding: 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+  top: 110%;
+  left: 50%;
+  margin-left: -60px;
+}
+.nodeMarker:hover .tooltip {
+  visibility: visible;
+}
