--- a/src/Components/Data/Data.scss
+++ b/src/Components/Data/Data.scss
@@ -199,7 +199,7 @@ p {
 
   padding-right: 0.3vw;
   padding-left: 0.2vw;
-  font-size: 1.1vw;
+  font-size: 15px;
 
   color: red;
   background-color: lighten(map-get($colors, Component), 40%);
