--- a/src/Components/Data/Data.scss
+++ b/src/Components/Data/Data.scss
@@ -217,3 +217,53 @@ p {
 .parent {
   position: relative;
 }
+
+.selectButton {
+  font-size: 20px;
+  font-family: Montserrat;
+  background-color: lighten(map-get($colors, Component), 5%);
+
+  border-radius: 5px;
+  border: none;
+  padding: 0.2rem;
+  height: 100%;
+  color: map-get($colors, Prim-text);
+  font-weight: bold;
+  border: 1px outset map-get($colors, Component);
+
+  &:hover {
+    color: map-get($colors, t-green);
+
+    background-color: darken(map-get($colors, Component), 5%);
+    //border: 10px outset ligthen(map-get($colors, t-green), 40%);
+    border-radius: 3px;
+  }
+}
+
+.selectButtons {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.tidElement {
+  display: flex;
+  margin: 0;
+  flex-direction: column;
+  font-size: 1.1rem;
+}
+
+.timeButton {
+  font-size: 20px;
+  font-family: Montserrat;
+  background-color: lighten(map-get($colors, Component), 5%);
+
+  border-radius: 5px;
+  border: none;
+  padding: 0.1rem;
+  height: 0 auto;
+
+  color: map-get($colors, Prim-text);
+  font-weight: bold;
+  border: 1px outset map-get($colors, Component);
+}
