--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -5,6 +5,7 @@ $colors: (
   //Component: #292929,
     Component: #1d1d1d,
   Prim-text: White,
-  t-green: #17fea0,
-  t-pink: rgb(255, 102, 128)
+  //t-green: #17fea0,
+    t-green: #2696a1,
+  t-pink: rgb(255, 102, 128),
 ) !global;
